# crewAI

./: .gitignore
appen/: README.md  pyproject.toml  report.md
appen/src/appen/: crew.py  main.py
src/crewai/agents/: crew_agent_executor.py
src/crewai/agents/agent_builder/utilities/: base_token_process.py
src/crewai/utilities/: agent_utils.py
