[project]
name = "appen"
version = "0.1.0"
description = "appen using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0",
]

[project.scripts]
appen = "appen.main:run"
run_crew = "appen.main:run"
train = "appen.main:train"
replay = "appen.main:replay"
test = "appen.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
